# modern_cpp_homework

./: readme.md
homework_1/: readme.md
homework_1/task_1/: commands.sh
homework_1/task_2/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  install.sh
homework_1/task_2/include/: ipb_arithmetic.hpp
homework_1/task_2/include/ipb_arithmetic/: subtract.hpp  sum.hpp
homework_1/task_2/src/: main.cpp  subtract.cpp  sum.cpp
homework_2/: readme.md
homework_2/cmake/: ClangFormat.cmake  StaticAnalyzers.cmake
homework_2/task_1/: CMakeLists.txt
homework_2/task_1/src/: main.cpp
homework_2/task_2/: CMakeLists.txt
homework_2/task_2/include/: tools.hpp
homework_2/task_2/src/: main.cpp  tools.cpp
homework_2/tests/: test_task_1.sh  test_task_2.sh
homework_3/: .gitignore  CMakeLists.txt  readme.md  test.html
homework_3/api/: html_writer.hpp  image_browser.hpp
homework_3/include/: homework_3.h
homework_3/src/: create_image_browser.cpp  html_writer.cpp  image_brower.cpp
homework_3/web_app/: example.html  style.css
homework_4/tests/: CMakeLists.txt  test_ipb_algorithm.cpp  test_main.cpp  test_named_vector.cpp
homework_5/: CMakeLists.txt
homework_5/include/: convert_dataset.hpp  homework_5.h  serialize.hpp
homework_5/src/: convert_dataset.cpp  serialize.cpp
homework_5/tests/: CMakeLists.txt  sifts_internal.cpp  sifts_internal.hpp  test_convert_dataset.cpp  test_main.cpp  test_serialize.cpp  utils.hpp
homework_5/tests/data/: lenna.txt
homework_5/tests/data/freiburg/dummy/: imageCompressedCam0_0000400.txt
homework_6/: CMakeLists.txt
homework_6/data/: lena.ascii.pgm  out.ascii.pgm
homework_6/include/: homework_6.h  image.hpp  io_tools.hpp
homework_6/src/: image.cpp  io_tools.cpp
homework_6/tests/: CMakeLists.txt  test_from_file.cpp  test_histogram.cpp  test_init.cpp  test_resize.cpp
homework_6/tests/data/: dummy_file.pgm
homework_7/: CMakeLists.txt  README.md
homework_7/include/: bow_dictionary.h  codebook.h  convert_dataset.hpp  homework_7.h
homework_7/src/: bow_dictionary.cpp  codebook.cpp  convert_dataset.cpp
homework_7/tests/: CMakeLists.txt  test_bow_dictionary.cpp  test_data.cpp  test_data.hpp  test_kmeans.cpp  test_utils.hpp
homework_8/task_1/: task1.cpp  test_stack_limit.sh
homework_8/task_2/: .clang-tidy  CMakeLists.txt  README.md
homework_8/task_2/.cache/clangd/index/: homework_8.h.A1F3AC1E10F4265E.idx  image.cpp.E32DD8140A11B0C0.idx  image.hpp.A819121F2BA50D7D.idx  io_strategy.h.470330DE726004D1.idx  io_tools.cpp.8D3CD555960E0983.idx  io_tools.hpp.3A6E743959E038F0.idx  png_strategy.cpp.177D42BE34771FB5.idx  png_strategy.h.E43ED2860526EBB0.idx  ppm_strategy.cpp.C0A08D7FEDB0A06B.idx  ppm_strategy.h.488F367F1B2B78A3.idx  test_from_png.cpp.4698AA5A3EA823DB.idx  test_from_ppm.cpp.F61F50F2FB779CCD.idx  test_init.cpp.F07247C1DD00D2DC.idx  test_resize.cpp.42BDA06398F075C0.idx
homework_8/task_2/include/: homework_8.h  image.hpp  io_strategy.h  png_strategy.h  ppm_strategy.h
homework_8/task_2/src/: image.cpp  png_strategy.cpp  ppm_strategy.cpp
homework_8/task_2/tests/: CMakeLists.txt  test_from_png.cpp  test_from_ppm.cpp  test_init.cpp  test_resize.cpp
homework_8/task_2/tests/data/: dummy_file.ppm
homework_9/: CMakeLists.txt
homework_9/include/: bow_dictionary.h  histogram.h  homework_9.h
homework_9/src/: bow_dictionary.cpp  codebook.cpp  histogram.cpp
homework_9/tests/: CMakeLists.txt  test_data.cpp  test_data.hpp  test_dictionary.cpp  test_histograms.cpp
misc/lecture3_test/: CMakeLists.txt  testbasics  testfs
misc/lecture3_test/src/: test.cpp  test_filesystem.cpp
